# shinnku-com

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  shinnku-com.code-workspace  tsconfig.json
.claude/: settings.local.json
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  clippy.toml
backend/.cargo/: config.toml
backend/data/: .gitignore
backend/fuse/: Cargo.toml
backend/fuse/src/: algorithm.rs  config.rs  fuseable.rs  lib.rs  tests.rs  types.rs  utils.rs
backend/fuse/src/inner/: algorithm.rs  config.rs  core.rs  fuseable.rs  mod.rs  types.rs
backend/server/: Cargo.toml
backend/server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/server/src/alg/: root.rs  search.rs
backend/server/src/algorithm/: root.rs  search.rs
backend/server/src/application/: mod.rs
backend/server/src/application/files/: mod.rs
backend/server/src/application/files/handlers/: get_file_tree_handler.rs  mod.rs
backend/server/src/application/files/queries/: get_file_tree_query.rs  mod.rs
backend/server/src/application/files/services/: file_tree_service.rs  mod.rs
backend/server/src/application/search/: mod.rs
backend/server/src/application/search/commands/: mod.rs  search_files_command.rs
backend/server/src/application/search/handlers/: combined_search_handler.rs  mod.rs  search_files_handler.rs
backend/server/src/application/search/queries/: combined_search_query.rs  mod.rs  search_files_query.rs
backend/server/src/application/search/services/: mod.rs  search_index_service.rs
backend/server/src/application/shared/: mod.rs
backend/server/src/application/shared/dto/: common.rs
backend/server/src/application/shared/services/: application_bootstrap_service.rs  mod.rs
backend/server/src/application/shared/traits/: command_handler.rs  mod.rs  query_handler.rs
backend/server/src/application/wiki/: mod.rs
backend/server/src/application/wiki/handlers/: get_wiki_content_handler.rs  mod.rs
backend/server/src/application/wiki/queries/: get_wiki_content_query.rs  mod.rs
backend/server/src/config/: mod.rs  search.rs  startup.rs  tree.rs
backend/server/src/configuration/: dependency_injection.rs  mod.rs  startup.rs
backend/server/src/domain/: mod.rs
backend/server/src/domain/files/: mod.rs
backend/server/src/domain/files/entities/: file_info.rs  mod.rs  tree_node.rs
backend/server/src/domain/files/factories/: mod.rs  tree_factory.rs
backend/server/src/domain/files/repositories/: file_repository.rs
backend/server/src/domain/files/value_objects/: file_path.rs  mod.rs  node_type.rs
backend/server/src/domain/search/entities/: mod.rs  search_item.rs  search_result.rs
backend/server/src/domain/search/repositories/: fuzzy_search_repository.rs  mod.rs  search_repository.rs
backend/server/src/domain/search/services/: combined_search_service.rs  fuzzy_search_service.rs  mod.rs  search_index_service.rs
backend/server/src/domain/search/value_objects/: mod.rs  query.rs  score.rs  search_path.rs
backend/server/src/domain/shared/: mod.rs
backend/server/src/domain/shared/errors/: mod.rs
backend/server/src/domain/shared/events/: domain_events.rs  mod.rs
backend/server/src/domain/wiki/entities/: mod.rs  wiki_page.rs
backend/server/src/domain/wiki/repositories/: mod.rs  wiki_repository.rs
backend/server/src/domain/wiki/services/: mod.rs  wiki_service.rs
backend/server/src/domain/wiki/value_objects/: mod.rs  wiki_content.rs
backend/server/src/dto/: files.rs  mod.rs  search.rs
backend/server/src/functions/: root.rs  search.rs
backend/server/src/handlers/: files.rs  inode.rs  intro.rs  mod.rs  search.rs  wiki.rs
backend/server/src/infrastructure/: mod.rs
backend/server/src/infrastructure/adapters/: mod.rs
backend/server/src/infrastructure/adapters/dto_mappers/: file_tree_mapper.rs  mod.rs
backend/server/src/infrastructure/adapters/search/: fuse_search_adapter.rs  mod.rs
backend/server/src/infrastructure/external_services/: file_system_service.rs  fuse_search_engine.rs  mod.rs
backend/server/src/infrastructure/persistence/: mod.rs
backend/server/src/infrastructure/persistence/json/: bucket_files_repository.rs  mod.rs
backend/server/src/infrastructure/persistence/memory/: in_memory_file_repository.rs  in_memory_search_repository.rs  mod.rs
backend/server/src/infrastructure/persistence/redis/: redis_client.rs
backend/server/src/infrastructure/web/: mod.rs
backend/server/src/interfaces/http/: mod.rs
backend/server/src/models/: inode.rs  mod.rs  search.rs  tree.rs
backend/server/src/repositories/: bucket_files.rs  mod.rs
backend/server/src/routes/: files.rs  mod.rs
backend/server/src/services/: mod.rs  proxy.rs  root.rs  search.rs  wiki.rs
backend/server/src/shared/errors/: app_error.rs
backend/server/src/shared/utils/: common_utils.rs
backend/server/src/tests/: config.rs  mod.rs  root_functions.rs  search_functions.rs  search_handlers.rs
backend/server/tests/: config.rs  root_functions.rs  search_functions.rs  search_handlers.rs
backend/src/: config.rs  data.rs  handlers.rs  main.rs  search.rs  state.rs
backend/src/alg/: mod.rs  root.rs  search.rs
backend/src/fuse/: lib.rs  mod.rs  tests.rs
backend/src/fuse/lib/: core.rs  types.rs
backend/src/handlers/: inode.rs  mod.rs  search.rs  wiki.rs
(+222 files in other folders)
