[package]
name = "shinnku-com-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.19", features = ["json"] }
anyhow = "1"
color-eyre = "0.6"
percent-encoding = "2"
redis = { version = "0.32", features = [
    "tokio-comp",
    "cluster-async",
    "connection-manager",
] }
toml = "0.8.23"
