[package]
name = "shinnku-com-backend"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
axum = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.45", features = ["full"] }
reqwest = { version = "^0.12", features = ["json"] }
anyhow = "^1.0"
color-eyre = "^0.6"
thiserror = "^1.0"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["fmt"] }
percent-encoding = "^2.0"
redis = { version = "^0.32", features = [
    "tokio-comp",
    "cluster-async",
    "connection-manager",
] }
toml = "^0.8"
tantivy = "^0.22"
fuse-lib = { path = "../fuse" }
tower = "^0.5"
tower-http = { version = "^0.5", features = ["trace"] }

[[bin]]
name = "shinnku-com-backend"
path = "src/main.rs"
